# inverted_react

./: README.md  pyproject.toml
inverted_react/: main.py  react_runner.py
scripts/: run.sh
src/inverted_react/: prompt.py
tests/: react_runner_test.py
