[tool.poetry]
name = "inverted-react"
version = "0.1.0"
description = ""
authors = ["Dominic Kramer"]
readme = "README.md"
packages = [{include = "inverted_react"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
